# BVSAR-feature-extract

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.conversion.yml  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cdk-deploy.yaml  ci_actions.yml  ci_tests.yml  tests.yml
feature_extract/: README.md  common.py  extract_handler.py  gdal-local.ini  pyproject.toml  retriever.py  settings.py  setup.cfg  setup.py
feature_extract/datasets/: dataset_parameters.py  dataset_provider.py  resource_roads.py
feature_extract/src/feature_extract/: __init__.py  byte_range_parameters.py  byte_range_response.py  common.py  extract_handler.py  extract_parameters.py  local_features.py  retriever.py  settings.py
feature_extract/src/feature_extract/datasets/: dataset.py  dataset_parameters.py  dataset_provider.py  resource_roads.py
feature_extract/src/feature_extract/datasets/providers/: resource_roads.py  shelters.py  trails.py
feature_extract/src/feature_extract/exceptions/: unsupported_dataset.py
feature_extract/src/feature_extract/util/: output_layers.py  print_datasets.py  print_layers.py
feature_extract/tests/: common.py  test_resource_roads.py  test_retrieval.py  test_shelters.py  test_trails.py
feature_extract/tests/data/: WHSE_FOREST_TENURE_FTEN_ROAD_SECTION_LINES_SVW.fgb  local-features.gpkg  shelters-template.fgb  trails-template.fgb
feature_extract/tests/data/FTEN_ROAD_SECTION_LINES_SVW.gdb/: a00000001.TablesByName.atx  a00000001.gdbtable  a00000004.CatItemsByPhysicalName.atx  a00000004.FDO_UUID.atx  a00000004.gdbtable  a00000006.CatRelsByDestinationID.atx  a00000006.FDO_UUID.atx  a00000006.gdbtable  a00000009.gdbtable  a00000009.gdbtablx  a00000009.spx
feature_extract/tests/data/FTEN_ROAD_SEGMENT_LINES_SVW.gdb/: a00000001.TablesByName.atx  a00000001.gdbtable  a00000004.CatItemsByPhysicalName.atx  a00000004.FDO_UUID.atx  a00000004.gdbtable  a00000006.CatRelsByDestinationID.atx  a00000006.FDO_UUID.atx  a00000006.gdbtable  a00000009.gdbtable  a00000009.gdbtablx  a00000009.spx
feature_extract_api/: README.md  pyproject.toml  setup.cfg  setup.py
feature_extract_api/src/feature_extract_api/: app.py  settings.py
feature_extract_api/tests/: test_routes.py
iac/: cdk.json  package-lock.json  package.json
iac/ecsalb/: README.md  cdk.json  package-lock.json  package.json
iac/ecsalb/lib/: ecsalb-stack.ts
iac/ecsalb/test/: ecsalb.test.ts
minio/: .env.creds
minio/client/: Dockerfile  configure.sh
scripts/: conversion.sh  creds.sh  init.sh  local.sh  run-api.sh  test.sh
ui/: index.html  package-lock.json  package.json
ui/src/: App.jsx  ContactBadge.jsx  Header.jsx  MapInterface.jsx  ModalAuthentication.jsx  PanelExtraction.jsx  main.jsx
