[tool.poetry]
name = "feature_extract"
version = "0.1.0"
description = "Extract individual feature data from BVSAR data stores"
authors = []
readme = "README.md"
packages = [
    { include = "feature_extract", from = "./src" },
]


[tool.poetry.dependencies]
python = ">=3.8"
GDAL = "^3.5.1"
pydantic = "^1.9.2"

[tool.poetry.dev-dependencies]
pytest = "~7.1.2"

[build-system]
requires = ["poetry-core~=1.0"]
build-backend = "poetry.core.masonry.api"