[tool.poetry]
name = "feature_extract"
version = "0.1.0"
description = "Extract individual feature data from BVSAR data stores"
authors = []
readme = "README.md"
packages = [
    { include = "feature_extract", from = "./src" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
pydantic = "^1.9.2"
boto3 = "~1.24.80"

[tool.poetry.dev-dependencies]
pytest = "~7.1.2"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"