[tool.poetry]
name = "feature_extract_api"
version = "0.1.0"
description = "API interface to extract individual feature data from BVSAR data stores"
authors = []
readme = "README.md"
packages = [
    { include = "feature_extract_api", from = "./src" },
]

[tool.poetry.dependencies]
python = ">=3.8"
bcrypt = "^4.0.0"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
pytest = "~7.1.2"

[build-system]
requires = ["poetry-core~=1.0"]
build-backend = "poetry.core.masonry.api"